--- a/PasswordManager/appsettings.json
+++ b/PasswordManager/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PasswordManagerContext": "Server=(localdb)\\mssqllocaldb;Database=PasswordManagerContext-95f67c5a-8d4a-4027-b256-ba5fef8ce5d3;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
